<resources>
    <string name="app_name"> DayCare</string>
    <string name="NewCustomer">Yes I am a rand new Customer</string>
    <string name="oldcustomer">No , I\'ve Been to  ...    Before</string>
    <string name="text1">We looking through all of our files and it doesn\'t look like we ave any records associated with that email address</string>
    <string name="text2">New To .......  DayCare?</string>
    <string name="text3">Which of the following apply to you</string>
    <string name="text4">Need help Contact Us</string>
    <string name="daycare_btn2">Monthly Memberships</string>
    <string name="daycare_btn3">Single day  </string>
    <string name="text5">Note :  For daycare services, any dog over 8 month             old must be spayed or neutered.</string>
    <string name="text6">Package 01</string>
    <string name="text7">"   4 day/month                 $31/day"</string>
    <string name="text8">Package 02</string>
    <string name="text9">"    8 day/month                 $29/day"</string>
    <string name="text10">Package 03</string>
    <string name="text11">"   12 day/month                    $27/day"</string>
    <string name="text13">"Membership customer receive $4 discount on boarding, $5 discount on nail trims , and 10% off baths  "</string>
    <string name="text14">Request a Booking</string>
    <string name="text15">Ready to bring your puppy in from daycare?</string>
    <string name="text16">About Dog</string>
    <string name="text17">Dog Name</string>
    <string name="plainText1" />
    <string name="title_home">Home</string>
    <string name="Topic">Request A Booking</string>
    <string name="SubTopic">Ready to bring your puppy in from daycare?</string>
    <string name="Update_btn">Change Booking</string>
    <string name="delete_btn">Delete Booking</string>
    <string name="Bill">Your Bill</string>
    <string name="Update_chng">Change Booking</string>
    <string name="Add_booking">Add Booking</string>
    <string name="Update_Topic">Change Booking</string>
    <string name="Delete_Topic">Delete Booking</string>
    <string name="Delete_chnge">Delete Booking</string>
    <string name="thnk_msg">Thank You For Your Booking</string>
    <string name="bill_back">Back To  Booking</string>
    <string name="btn_BMI">BMI</string>
    <string name="btn_Details">My Details</string>
    <string name="btn_Health">Health</string>
    <string name="btn_Meal">Meal</string>
    <string name="topic_bmi">Calculate BMI</string>
    <string name="text1_bmi" />
    <string name="text2_bmi">Dog Name</string>
    <string name="text2bmi_name">Shane</string>
    <string name="text3_bmi">Gender</string>
    <string name="bmi_name">Pet\'s Name</string>
    <string name="bmi_age">Age</string>
    <string name="bmi_gender">Gender</string>
    <string name="bmi_breed">Breed</string>
    <string name="bmi_weight">Weight</string>
    <string name="bmi_height">Height</string>
    <string name="btn_bmicalc">Calculate</string>
    <string name="detail_name">Shane Daxen</string>
    <string name="detail_breed">Golden Retriever</string>
    <string name="detail_weight"></string>
    <string name="detail_height">40 cm</string>
    <string name="detail_BMI">34</string>
    <string name="detail_age">12 months</string>
    <string name="btn_detaildelete">Delete</string>
    <string name="btn_detailupdate">Update</string>
    <string name="bmi_value">BMI Value</string>
    <string name="bmi_value2" />
    <string name="meal_1">01st Day</string>
    <string name="btn_1stmeal">View</string>
    <string name="meal_2">02nd Day</string>
    <string name="btn_2ndmeal">View</string>
    <string name="btn_updatemeal">Modify</string>
    <string name="btn_addmeal">Add</string>
    <string name="modify_morning">Morning</string>
    <string name="modify_editmorning" />
    <string name="modify_noon">Noon</string>
    <string name="modify_editnoon" />
    <string name="modify_night">Night</string>
    <string name="modify_editnight" />
    <string name="modify_day">Day</string>
    <string name="modify_editday" />
    <string name="btn_modify_delete">Delete</string>
    <string name="btn_modify_modify">Modify</string>
    <string name="add_morning">Morning</string>
    <string name="add_editmorning" />
    <string name="add_noon">Noon</string>
    <string name="add_editnoon" />
    <string name="add_night">Night</string>
    <string name="add_editnight" />
    <string name="add_day">Day</string>
    <string name="add_editday" />
    <string name="btn_add_meal">Add</string>
    <string name="detail_agev">Age</string>
    <string name="detail_editage">14 months</string>
    <string name="detail_weightv">Weight</string>
    <string name="detail_editweightv">15 Kg</string>
    <string name="detail_Heightv">Height</string>
    <string name="detail_editHeightv">35 cm</string>
    <string name="detail_BMIv">BMI</string>
    <string name="detail_editBMIv">22</string>
    <string name="detail_Vaccine">Last Vaccine</string>
    <string name="detail_editVaccine">2022/02/12</string>
    <string name="btn_detail_update">Update</string>
    <string name="detail_updateage">Age</string>
    <string name="btn_main">Start</string>
    <string name="bill_payment">Back To Booking</string>
    <string name="text18">Package5</string>
    <string name="text19">Package 5</string>
    <string name="text20">Package 07</string>
    <string name="text21">Package 06</string>
    <string name="cal_topic">Package Calculator</string>
    <string name="amount">Total Amount</string>
    <string name="cal_button">Calculate</string>
    <string name="back">Back To Home</string>
    <string name="text12">Package 04</string>
    <string name="go_cal">Go To Calculator</string>
    <string name="Next">Next</string>
    <string name="packag">Package No</string>
    <string name="no_hor">No Of Hours</string>
    <string name="no_day">No Of Dates</string>
    <string name="pack_no">Package No</string>
    <string name="radio1">Package 01</string>
    <string name="radio2">Package 02</string>
    <string name="cal_butn1">Calculator</string>
    <string name="doc_page1_btn">Lets Start</string>
    <string name="doc_page1_disc">Until one has loved an animal, a part of one\'s soul remains unawakened</string>
    <string name="tv_ourdoctors">Our Doctors</string>
    <string name="doc_name1">DR Rayen</string>
    <string name="see_more_1">Book Now</string>
    <string name="doc_name2">DR Chaan</string>
    <string name="see_more2">Book Now</string>
    <string name="doc_name3">DR Saam</string>
    <string name="see_more_3">BOOK NOW</string>
    <string name="doc_page4_text1">Doctor Name :-</string>
    <string name="doc_page4_text2a">20 May 2022</string>
    <string name="doc_page4_text3a">9.15a.m</string>
    <string name="doc_page4_btn1">OK</string>
    <string name="doc_page4_btn2">EDIT</string>
    <string name="doc_page4_btn3">DELETE</string>
    <string name="doc_dog_count_1">How many Dogs are Visiting :-</string>
    <string name="doc_dog_counts">x</string>
    <string name="doc_dog_count">1</string>
    <string name="doc_dog_counta1" />
    <string name="doc_page4_text4">Dog count :</string>
    <string name="doc_page4_text4a">1</string>
    <string name="docpaymentbtna">PAY</string>
    <string name="docpayment">700</string>
    <string name="doc_date">SELECT DATE</string>
    <string name="User_Name">User Name  :-</string>
    <string name="doc_user">User Name :-</string>
    <string name="doc_dete">Doctor Name ,</string>
    <string name="homepage_main_text">Do not hesitate to adopt a dog!</string>
    <string name="get_started_button"> Get Started </string>
    <string name="homepage_first_description"> Welcome to Dogvio. This is an app which help you to manage your
    dogs healthcare, find partners and find day cares for your dog.</string>
    <string name="homepage_second_description">
        By pressing get started button you are agreeing to our terms and conditions.
    </string>
    <string name="homepage_getstarted_button"> Get Started </string>
    <string name="homepage_dog_image"> Dog Image </string>
    <string name="login_page_title"> Login </string>
    <string name="enter_login_credentials_text"> Enter your login credentials to login
    to the application</string>
    <string name="login_page_labels_email">Email</string>
    <string name="login_page_labels_password">Password</string>
    <string name="login_page_labels_emailhint">Enter Your Email</string>
    <string name="login_page_labels_password_hint">Enter Your Password</string>
    <string name="login_button"> Login </string>
    <string name="login_page_not_registered_text"> Do not have an account as yet? Click here to register </string>
    <string name="register_page_title"> Register </string>
    <string name="enter_registration_credentials_text"> Enter your details to register for the application</string>
    <string name="go_to_login_text"> Have an account? Click here to login</string>
    <string name="username_input"> Your Name</string>
    <string name="register_button"> Register </string>
    <string name="social_dogs_partners"> Partners </string>
    <string name="social_dogs_partners_close_text"> Partners close to you </string>
    <string name="puppuy_name"> Puppy Taby </string>
    <string name="social_puppuy_category"> French Black Puppy </string>
    <string name="social_puppy_call_owner"> Call Owner </string>
    <string name="social_puppy_add_dog"> Add your dog </string>
    <string name="social_dog_breed_label"> Breed </string>
    <string name="social_dog_age_label"> Age </string>
    <string name="social_dog_age"> 7 </string>
    <string name="social_dog_color"> Black </string>
    <string name="social_dog_color_label"> Colour </string>
    <string name="dog_gender_label"> Gender </string>
    <string name="dog_gender"> Male </string>
    <string name="social_dog_description">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="social_add_your_dog_headline"> Add your dog </string>
    <string name="social_update_your_dog_headline"> Update your dog </string>
    <string name="social_add_your_dog_small_description"> Add your dog to the community.
So We will display him to the others! </string>
    <string name="social_update_your_dog_small_description"> Update information  of your pet</string>
    <string name="social_add_form_dog_name_label"> Name </string>
    <string name="social_add_form_dog_name_hint"> Enter Name </string>
    <string name="social_add_form_dog_breed_label"> Breed </string>
    <string name="social_add_form_dog_breed_hint"> Enter Breed </string>
    <string name="social_add_form_dog_dob_label"> Date of Birth </string>
    <string name="social_add_form_dog_color_label"> Colour of the dog </string>
    <string name="social_add_form_dog_dob_hint"> Enter date of birth in YYYY/MM/DD format </string>
    <string name="social_add_form_dog_sex_label"> Sex </string>
    <string name="social_add_form_dog_sex_hint"> Enter sex </string>
    <string name="social_add_form_dog_contact_label"> Contact Number </string>
    <string name="social_add_form_dog_contact_hint"> Enter your contact number </string>
    <string name="social_add_form_dog_description_label"> Brief Description </string>
    <string name="social_add_form_dog_description_hint"> Enter a brief description about your dog </string>
    <string name="social_add_form_dog_image_label"> Image </string>
</resources>