<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/healthbmi"
    tools:context=".HealthCare_MealList_Modify">

    <TextView
        android:id="@+id/modify_morning"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:text="@string/modify_morning"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/modify_editmorning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/modify_editmorning"
        app:layout_constraintBottom_toBottomOf="@+id/modify_morning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/modify_noon"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/modify_noon"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_morning" />

    <EditText
        android:id="@+id/modify_editnoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/modify_editnoon"
        app:layout_constraintBottom_toBottomOf="@+id/modify_noon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_editmorning"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/modify_night"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/modify_night"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_noon" />

    <EditText
        android:id="@+id/modify_editnight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/modify_editnight"
        app:layout_constraintBottom_toBottomOf="@+id/modify_night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_editnoon"
        app:layout_constraintVertical_bias="0.929"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/modify_day"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/modify_day"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_night" />

    <EditText
        android:id="@+id/modify_editday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/modify_editday"
        app:layout_constraintBottom_toBottomOf="@+id/modify_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_editnight"
        app:layout_constraintVertical_bias="0.933"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_modify_modify"
        android:layout_width="147dp"
        android:layout_height="54dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/button_drawable"
        android:text="@string/btn_modify_modify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>