<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/healthbmi"
    tools:context=".HealthCare_MealList_Add">

    <TextView
        android:id="@+id/add_morning"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:text="@string/add_morning"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_editmorning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/add_editmorning"
        app:layout_constraintBottom_toBottomOf="@+id/add_morning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/add_noon"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/add_noon"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_morning" />

    <EditText
        android:id="@+id/add_editnoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/add_editnoon"
        app:layout_constraintBottom_toBottomOf="@+id/add_noon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_morning"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/add_night"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/add_night"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_noon" />

    <EditText
        android:id="@+id/add_editnight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/add_editnight"
        app:layout_constraintBottom_toBottomOf="@+id/add_night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_editnoon"
        app:layout_constraintVertical_bias="0.929"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/add_day"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/add_day"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_night" />

    <EditText
        android:id="@+id/add_editday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/add_editday"
        app:layout_constraintBottom_toBottomOf="@+id/add_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_editnight"
        app:layout_constraintVertical_bias="0.933"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_add_meal"
        android:layout_width="304dp"
        android:layout_height="60dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/button_drawable"
        android:text="@string/btn_add_meal"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>