<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Day_Care"
    android:background="@drawable/dog3">


  <Button
      android:id="@+id/button3"
      android:layout_width="235dp"
      android:layout_height="56dp"
      android:layout_marginTop="104dp"
      android:background="@drawable/button_drawable"
      android:text="@string/NewCustomer"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <Button
      android:id="@+id/button4"
      android:layout_width="244dp"
      android:layout_height="58dp"
      android:layout_marginTop="192dp"
      android:background="@drawable/button_drawable"
      android:text="@string/oldcustomer"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"

      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="366dp"
      android:layout_height="160dp"
      android:layout_marginTop="268dp"
      android:fontFamily="serif"
      android:text="@string/text1"
      android:textColor="#050505"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.644"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="394dp"
      android:layout_height="115dp"
      android:layout_marginTop="56dp"
      android:fontFamily="sans-serif-smallcaps"
      android:text="@string/text2"
      android:textAlignment="center"
      android:textColor="#090909"
      android:textSize="48sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.47"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="56dp"
      android:fontFamily="sans-serif-condensed-medium"
      android:text="@string/text3"
      android:textColor="#040404"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>